updated footer links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         Coded by Angela SmitCoded by
             <a href="https://github.com/AngelaLynnSmith" target="_blank"> Angela Lynn Smith</a>, is
             <a href="https://github.com/AngelaLynnSmith/world-clock" target="_blank"> open-sourced on GitHub</a>, and
-            <a href="https://world-clock-010524.netlify.app//" target="_blank"> hosted on Netlify.</a>
+            <a href="https://world-clock-010524.netlify.app/" target="_blank"> hosted on Netlify.</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
