added basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>World Clock - Angela Lynn Smith</title>
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
+
+<select>
+<option value="">Honolulu</option>
+<option value="">San José</option>
+<option value="">Lima</option>
+<option value="">Santorini</option>
+</select>
+
+
+<div class="city">
+    <h2>Honolulu</h2>
+    <div class="date">January 2nd, 2024</div>
+    <div class="time">11:49:15 AM</div>
+
+</div>
+
+<div class="city">
+    <h2>San José</h2>
+    <div class="date">January 2nd, 2024</div>
+    <div class="time">11:49:15 AM</div>
+
     <footer>
         Coded by Angela SmitCoded by
             <a href="https://github.com/AngelaLynnSmith" target="_blank"> Angela Lynn Smith</a>, is
