--- a/index.html
+++ b/index.html
@@ -19,20 +19,44 @@
 
 
 <div class="city">
-    <h2>Honolulu</h2>
+    <div>
+    <h2>Honolulu 🇺🇸</h2>
     <div class="date">January 2nd, 2024</div>
-    <div class="time">11:49:15 AM</div>
+    </div>
 
+    <div class="time">11:49:15 <small>AM</small></div>
 </div>
 
 <div class="city">
-    <h2>San José</h2>
-    <div class="date">January 2nd, 2024</div>
-    <div class="time">11:49:15 AM</div>
+    <div>
+        <h2>San José 🇨🇷</h2>
+        <div class="date">January 2nd, 2024</div>
+    </div>
+
+    <div class="time">11:49:15 <small>AM</small></div>
+</div>
+
+<div class="city">
+    <div>
+        <h2>Lima 🇵🇪</h2>
+        <div class="date">January 2nd, 2024</div>
+    </div>
+
+    <div class="time">11:49:15 <small>AM</small></div>
+</div>
+
+<div class="city">
+    <div>
+        <h2>Santorini 🇬🇷</h2>
+        <div class="date">January 2nd, 2024</div>
+    </div>
+
+    <div class="time">11:49:15 <small>AM</small></div>
+</div>
 
     <footer>
-        Coded by Angela SmitCoded by
-            <a href="https://github.com/AngelaLynnSmith" target="_blank"> Angela Lynn Smith</a>, is
+        Coded by
+            <a href="https://github.com/AngelaLynnSmith" target="_blank"> <strong>Angela Lynn Smith</strong></a>,
             <a href="https://github.com/AngelaLynnSmith/world-clock" target="_blank"> open-sourced on GitHub</a>, and
             <a href="https://world-clock-010524.netlify.app/" target="_blank"> hosted on Netlify.</a>
     </footer>
