--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" /> 
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.44/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock - Angela Lynn Smith</title>
 </head>
 <body>
@@ -18,40 +20,40 @@
 </select>
 
 
-<div class="city">
+<div class="city" id="honolulu">
     <div>
     <h2>Honolulu 🇺🇸</h2>
-    <div class="date">January 2nd, 2024</div>
+    <div class="date"></div>
     </div>
 
-    <div class="time">11:49:15 <small>AM</small></div>
+    <div class="time"></div>
 </div>
 
-<div class="city">
+<div class="city" id="san-jose">
     <div>
         <h2>San José 🇨🇷</h2>
-        <div class="date">January 2nd, 2024</div>
+        <div class="date"></div>
     </div>
 
-    <div class="time">11:49:15 <small>AM</small></div>
+    <div class="time"></div>
 </div>
 
-<div class="city">
+<div class="city" id="lima">
     <div>
         <h2>Lima 🇵🇪</h2>
-        <div class="date">January 2nd, 2024</div>
+        <div class="date"></div>
     </div>
 
-    <div class="time">11:49:15 <small>AM</small></div>
+    <div class="time"></div>
 </div>
 
-<div class="city">
+<div class="city" id="santorini">
     <div>
         <h2>Santorini 🇬🇷</h2>
-        <div class="date">January 2nd, 2024</div>
+        <div class="date"></div>
     </div>
 
-    <div class="time">11:49:15 <small>AM</small></div>
+    <div class="time"></div>
 </div>
 
     <footer>
