added functionality for the select

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <div class="container">
     <h1>World Clock</h1>
 
-<select>
-<option value="">Honolulu</option>
-<option value="">San José</option>
-<option value="">Lima</option>
-<option value="">Santorini</option>
+<select id="city">
+<option value="">Select a city...</option>
+<option value="Pacific/Honolulu">Honolulu</option>
+<option value="America/Costa_Rica">San José</option>
+<option value="America/Lima">Lima</option>
+<option value="Europe/Athens">Santorini</option>
 </select>
 
-
+<div id="cities">
 <div class="city" id="honolulu">
     <div>
     <h2>Honolulu 🇺🇸</h2>
@@ -55,7 +56,7 @@
 
     <div class="time"></div>
 </div>
-
+</div>
     <footer>
         Coded by
             <a href="https://github.com/AngelaLynnSmith" target="_blank"> <strong>Angela Lynn Smith</strong></a>,
