added current location

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <select id="city">
 <option value="">Select a city...</option>
+<option value="current">My current location</option>
 <option value="Pacific/Honolulu">Honolulu</option>
 <option value="America/Costa_Rica">San José</option>
 <option value="America/Lima">Lima</option>
