--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="container">
-    <h1>World Clock</h1>
+    <h1>
+        <a href="/"> World Clock </a>
+    
+    </h1>
 
 <select id="city">
 <option value="">Select a city...</option>
