--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
 </div>
     <footer>
         Coded by
-            <a href="https://github.com/AngelaLynnSmith" target="_blank"> <strong>Angela Lynn Smith</strong></a>,
-            <a href="https://github.com/AngelaLynnSmith/world-clock" target="_blank"> open-sourced on GitHub</a>, and
-            <a href="https://world-clock-010524.netlify.app/" target="_blank"> hosted on Netlify.</a>
+            <a href="https://github.com/AngelaLynnSmith" target="_blank"> <strong>Angela Lynn Smith,</strong></a>
+            <br>
+            is open-sourced on 
+            <a href="https://github.com/AngelaLynnSmith/world-clock" target="_blank">GitHub,</a> and hosted on
+            <a href="https://world-clock-010524.netlify.app/" target="_blank">Netlify.</a>
     </footer>
     <script src="javascript/index.js"></script>
 </body>
